[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dex-dumper-bot"
version = "1.0.0"
description = "A DEX token monitoring bot with spam filtering and Telegram notifications"
authors = [{name = "Dumper Bot Developer"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests==2.31.0",
    "python-telegram-bot==20.7",
    "aiohttp==3.9.1",
    "asyncio==3.4.3",
    "websockets==12.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/dex-dumper-bot"
Repository = "https://github.com/yourusername/dex-dumper-bot"

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*"]